--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+  .container-register{
+    height: 3000%;
+    width:100%;
+    background: linear-gradient(45deg,#070651,#46C3AE,#1E3C68,#94E5F5);
+    background-size: 300% 300%;
+    animation: color 12s ease-in-out infinite;
+    margin: 0;
+  }
+  @keyframes color{
+    0%{
+      background-position: 0 50%;
+    }
+    50%{
+      background-position: 100% 50%;
+    }
+    100%{
+      background-position: 0 50%;
+    }
+  }
+  body{
+    margin: 0;
+  }
