--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -16,6 +16,12 @@
             <input id="email" name="email" type="email" autocomplete="email" required formControlName="email"
               class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2" />
           </div>
+            <span *ngIf="loginForm.controls['email'].getError('required')" class="text-red-500 text-xs">
+             *El campo es requerido
+            </span>
+            <span *ngIf="loginForm.controls['email'].getError('email')" class="text-red-500 text-xs">
+              *El correo electrónico no es válido
+            </span>
         </div>
 
         <div>
@@ -34,7 +40,8 @@
 
         <div>
           <button type="submit"
-            class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+            class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+            [disabled]="loginForm.invalid">
             Ingresar
           </button>
         </div>
