--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@
 
 
   .container-register{
-    height: 3000%;
-    width:100%;
+    /* height: 100vh;
+    width:100%; */
     background: linear-gradient(45deg,#070651,#46C3AE,#1E3C68,#94E5F5);
     background-size: 300% 300%;
     animation: color 12s ease-in-out infinite;
@@ -26,3 +26,5 @@
   body{
     margin: 0;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
