--- a/src/app/auth/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/pages/registro-usuario/registro-usuario.component.html
@@ -15,11 +15,26 @@
           
               <div class="border-b border-gray-900/10 pb-5">          
                 <div class="mt-5 grid grid-cols-1 gap-x-4 gap-y-6 sm:grid-cols-6">
-                  <div class="sm:col-span-6">
-                    <label for="user-name" class="block text-sm font-medium leading-6 text-gray-900">Nombre Completo</label>
+                  <div class="sm:col-span-3">
+                    <label for="identity" class="block text-sm font-medium leading-6 text-gray-900">Cédula</label>
                     <div class="mt-2">
-                      <input type="text" name="user-name" id="user-name" formControlName="username" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                      <input type="text" name="identity" id="identity" formControlName="identityNumber" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
                     </div>
+                    <data-required-message *ngIf="userGroup.controls['identityNumber'].getError('required')" ></data-required-message>
+                  </div>
+                  <div class="sm:col-span-3 sm:col-start-1">
+                    <label for="user-name" class="block text-sm font-medium leading-6 text-gray-900">Nombres</label>
+                    <div class="mt-2">
+                      <input type="text" name="user-name" id="user-name" formControlName="username" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
+                    </div>
+                    <data-required-message *ngIf="userGroup.controls['username'].getError('required')" ></data-required-message>
+                  </div>
+                  <div class="sm:col-span-3">
+                    <label for="user-lastname" class="block text-sm font-medium leading-6 text-gray-900">Apellidos</label>
+                    <div class="mt-2">
+                      <input type="text" name="user-lastname" id="user-lastname" formControlName="userlastname" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
+                    </div>
+                    <data-required-message *ngIf="userGroup.controls['userlastname'].getError('required')" ></data-required-message>
                   </div>
                   <div class="sm:col-span-3">
                     <label for="role" class="block text-sm font-medium leading-6 text-gray-900">Tipo Usuario</label>
@@ -28,31 +43,39 @@
                         <option *ngFor="let rol of userTypes" [value]="rol.value">{{rol.label}}</option>
                       </select>
                     </div>
+                    <data-required-message *ngIf="userGroup.controls['rolId'].getError('required')" ></data-required-message>
                   </div>
                   <div class="sm:col-span-4">
                     <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo electrónico</label>
                     <div class="mt-2">
-                      <input id="email" name="email" type="email" formControlName="email" autocomplete="email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                      <input id="email" name="email" type="email" formControlName="email" autocomplete="email" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
                     </div>
+                    <data-required-message *ngIf="userGroup.controls['email'].getError('required')"></data-required-message>
+                    <!-- <data-required-message *ngIf="userGroup.controls['email'].getError('email')" ></data-required-message> -->
                   </div>
                   <div class="sm:col-span-2">
                     <label for="phoneNumber" class="block text-sm font-medium leading-6 text-gray-900">Celular</label>
                     <div class="mt-2">
-                      <input id="phoneNumber" name="phoneNumber" type="number" autocomplete="phoneNumber" formControlName="phoneNumber" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                      <input id="phoneNumber" name="phoneNumber" type="number" autocomplete="phoneNumber" formControlName="phoneNumber" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
                     </div>
+                    <data-required-message *ngIf="userGroup.controls['phoneNumber'].getError('required')" ></data-required-message>
                   </div>
         
                   <div class="sm:col-span-3 sm:col-start-1">
                     <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Contraseña</label>
                     <div class="mt-2">
-                      <input type="password" name="password" id="password" formControlName="password" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                      <input type="password" name="password" id="password" formControlName="password" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
                     </div>
+                    <data-required-message *ngIf="userGroup.controls['password'].getError('required')" ></data-required-message>
                   </div>
           
                   <div class="sm:col-span-3">
                     <label for="passwordConfirm" class="block text-sm font-medium leading-6 text-gray-900">Confirmar contraseña</label>
                     <div class="mt-2">
-                      <input type="password" name="passwordConfirm" id="passwordConfirm" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                      <input type="password" name="passwordConfirm" id="passwordConfirm" formControlName="passwordConfirm" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2">
+                    </div>
+                    <div *ngIf="userGroup.getError('mustBeEqual')" class="text-red-500 text-xs">
+                      *No coincide con la contraseña
                     </div>
                   </div>
                 </div>
