--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -34,7 +34,7 @@
               class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2" />
           </div>
           <div class="text-sm text-right">
-            <a href="#" class="font-semibold text-blue-900 hover:text-blue-800" routerLink="/auth/recovery">Olvidé mi contraseña</a>
+            <a href="#" class="font-semibold text-blue-900 hover:text-blue-800" routerLink="/auth/new-password">Olvidé mi contraseña</a>
           </div>
         </div>
 
