--- a/src/app/auth/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/pages/registro-usuario/registro-usuario.component.html
@@ -80,7 +80,11 @@
                   </div>
                 </div>
               </div>
-          
+              <div>
+                <ngx-recaptcha2 #captchaElem
+                [siteKey]="siteKey">
+                </ngx-recaptcha2>
+              </div>
             <div class="mt-6 flex items-center justify-end gap-x-6 pb-7">
               <button type="button" routerLink="/auth/login" class="text-sm font-semibold leading-6 text-gray-900">Cancelar</button>
               <button type="submit" (click)="onSubmit()" class="rounded-md bg-blue-900 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Registrarse</button>
