--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -3,7 +3,9 @@
   <div class="card bg-white rounded-lg pb-10">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm mt-10">
       <img class="mx-auto h-16 w-auto" src="assets/logo.png" alt="logo cdiar" />
-      <h2 class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
+      <h2
+        class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
+      >
         Iniciar sesión
       </h2>
     </div>
@@ -11,37 +13,69 @@
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm mr-3 ml-3">
       <form class="space-y-6" [formGroup]="loginForm" (submit)="onSubmit()">
         <div>
-          <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo electrónico</label>
+          <label
+            for="email"
+            class="block text-sm font-medium leading-6 text-gray-900"
+            >Correo electrónico</label
+          >
           <div class="mt-2">
-            <input id="email" name="email" type="email" autocomplete="email" required formControlName="email"
-              class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2" />
+            <input
+              id="email"
+              name="email"
+              type="email"
+              autocomplete="email"
+              formControlName="email"
+              class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 peer peer-invalid"
+              pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{2,5}"
+            />
+            <span
+                  class="mt-2 hidden text-xs text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
+                >
+                  *Correo electrónico inválido
+                </span>
           </div>
-            <span *ngIf="loginForm.controls['email'].getError('required')" class="text-red-500 text-xs">
-             *El campo es requerido
-            </span>
-            <span *ngIf="loginForm.controls['email'].getError('email')" class="text-red-500 text-xs">
-              *El correo electrónico no es válido
-            </span>
         </div>
 
         <div>
           <div class="flex items-center justify-between">
-            <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Contraseña</label>
+            <label
+              for="password"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Contraseña</label
+            >
           </div>
           <div class="mt-2">
-            <input id="password" name="password" type="password" autocomplete="current-password" required
+            <input
+              id="password"
+              name="password"
+              type="password"
+              autocomplete="current-password"
               formControlName="password"
-              class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2" />
+              class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2 invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500 peer peer-invalid"
+              pattern=".{8,}$"
+            />
+            <span
+                  class="mt-2 hidden text-xs text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block"
+                >
+                  *Contraseña debe tener al menos 8 caracteres
+                </span>
           </div>
           <div class="text-sm text-right">
-            <a href="#" class="font-semibold text-blue-900 hover:text-blue-800" routerLink="/auth/new-password">Olvidé mi contraseña</a>
+            <a
+              href="#"
+              class="font-semibold text-blue-900 hover:text-blue-800"
+              routerLink="/auth/new-password"
+              >Olvidé mi contraseña</a
+            >
           </div>
         </div>
 
         <div>
-          <button type="submit"
-            class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-            [disabled]="loginForm.invalid">
+          <button
+            type="submit"
+            class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 group-invalid:pointer-events-none group-invalid:opacity-30"
+            [disabled]="loginForm.invalid"
+          >
             Ingresar
           </button>
         </div>
@@ -49,8 +83,12 @@
 
       <p class="mt-10 text-center text-sm text-gray-500">
         ¿No te has registrado?
-        <a href="#" class="font-semibold leading-6 text-blue-900 hover:text-blue-800" routerLink="/auth/registro">Crear
-          cuenta</a>
+        <a
+          href="#"
+          class="font-semibold leading-6 text-blue-900 hover:text-blue-800"
+          routerLink="/auth/registro"
+          >Crear cuenta</a
+        >
       </p>
     </div>
   </div>
