chore: Refactor HTML buttons in recovery and verification pages for consistency

--- a/src/app/auth/pages/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/pages/registro-usuario/registro-usuario.component.html
@@ -117,7 +117,7 @@
           <button type="button" routerLink="/auth/login" class="text-sm font-semibold leading-6 text-gray-900">
             Cancelar
           </button>
-          <button type="submit" (click)="onSubmit()"
+          <button type="submit"
             class="rounded-md bg-blue-900 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
             Registrarse
           </button>
