--- a/src/app/auth/pages/recovery-email/recovery-email.component.html
+++ b/src/app/auth/pages/recovery-email/recovery-email.component.html
@@ -20,7 +20,7 @@
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2" />
         </div>
         <div>
-          <button type="submit" (click)="onSubmit()"
+          <button type="submit"
             class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
             Enviar código de recuperación
           </button>
