--- a/src/app/auth/pages/recovery-password/recovery-password.component.html
+++ b/src/app/auth/pages/recovery-password/recovery-password.component.html
@@ -25,8 +25,9 @@
           </ngx-recaptcha2>
         </div>
         <div>
-          <button type="submit" (click)="onSubmit()"
-            class="flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+          <button type="submit" class=" flex w-full justify-center rounded-md bg-blue-900 px-3 py-1.5 text-sm font-semibold leading-6
+            text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2
+            focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
             Reestablecer contraseña
           </button>
         </div>
