--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -86,7 +86,7 @@
         <a
           href="#"
           class="font-semibold leading-6 text-blue-900 hover:text-blue-800"
-          routerLink="/auth/registro"
+          routerLink="/home"
           >Crear cuenta</a
         >
       </p>
