creación de menu y modificaciones de estilo

--- a/src/app/auth/layout/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layout/auth-layout/auth-layout.component.html
@@ -1,4 +1,22 @@
-<div class="container-register">
+<!-- <body class="container-register">
+    <router-outlet></router-outlet>
+<shared-footer></shared-footer>
+
+</body> -->
+<!-- <div class="container-register">
     <router-outlet/>
-    <shared-footer></shared-footer>
-</div>
+</div> -->
+
+<body>
+    <div id="wrapper">
+            <div class="container">
+                <router-outlet></router-outlet>            
+            </div>
+        <footer>
+            <!-- <div class="container">
+                <shared-footer></shared-footer>
+            </div> -->
+            <shared-footer/>
+        </footer>
+    </div>
+</body>
