--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -1,20 +1,13 @@
-<div class="w-full flex bg-blue-900 h-14">
-  <!-- <mat-icon class="text-white text-2xl">menu</mat-icon> -->
-  <p>Bienvenido</p>
-  <hr>
-</div>
-<div class="w-64 h-screen bg-blue-950 text-white -mt-10">
+<div class="w-64 h-screen bg-blue-950 text-white -mt-12">
   <nav class="mt-10">
     <div *ngFor="let option of menuOptions" class="flex flex-col">
       <a
         (click)="toggleExpand(option)"
         class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer"
-        >
+      >
         <mat-icon>{{ option.icon }}</mat-icon>
         {{ option.name }}
-        </a
-
-      >
+      </a>
       <div
         *ngFor="let subOption of option.subOptions"
         [ngClass]="{ hidden: !option.expanded }"
@@ -25,3 +18,13 @@
     </div>
   </nav>
 </div>
+<!-- </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      @for (content of fillerContent; track content) {
+  <p>{{content}}</p>
+}
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div> -->
