Diseño de landing page

--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -16,15 +16,12 @@
         <a [routerLink]="subOption.route">{{ subOption.name }}</a>
       </div>
     </div>
+    <hr class="mt-40">
+    <div class="mt-5">
+      <a class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer">
+        <mat-icon>logout</mat-icon>
+        Cerrar Sesión
+      </a>
+    </div>
   </nav>
 </div>
-<!-- </mat-nav-list>
-    </mat-sidenav>
-
-    <mat-sidenav-content>
-      @for (content of fillerContent; track content) {
-  <p>{{content}}</p>
-}
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-</div> -->
