footer agregado en landing page

--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -26,6 +26,7 @@
 
     <mat-sidenav-content>
       <router-outlet></router-outlet>
+      <shared-footer></shared-footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
