Avance en creación de componente recursos

--- a/src/app/auth/layout/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layout/auth-layout/auth-layout.component.html
@@ -1,22 +1,15 @@
-<!-- <body class="container-register">
-    <router-outlet></router-outlet>
-<shared-footer></shared-footer>
-
-</body> -->
-<!-- <div class="container-register">
-    <router-outlet/>
-</div> -->
-
-<body>
+<!-- <body>
     <div id="wrapper">
             <div class="container">
                 <router-outlet></router-outlet>            
             </div>
         <footer>
-            <!-- <div class="container">
-                <shared-footer></shared-footer>
-            </div> -->
             <shared-footer/>
         </footer>
     </div>
-</body>
+</body> -->
+
+<div id="wrapper">
+    <router-outlet></router-outlet>
+    <shared-footer></shared-footer>
+</div>
