--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -25,8 +25,10 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
-      <shared-footer></shared-footer>
+      <div id="wrapper">
+        <router-outlet></router-outlet>
+        <shared-footer></shared-footer>
+      </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
