--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="w-64 h-screen bg-blue-950 text-white -mt-12">
   <nav class="mt-10">
     <div *ngFor="let option of menuOptions" class="flex flex-col">
-      <a (click)="toggleExpand(option)" class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer">
+      <a (click)="toggleExpand(option)" class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer" [routerLink]="option.route">
         <mat-icon>{{ option.icon }}</mat-icon>
         {{ option.name }}
       </a>
