--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="w-64 h-screen bg-blue-950 text-white -mt-12">
+<div class="w-55 bg-blue-950 text-white -mt-12">
   <nav class="mt-10">
     <div *ngFor="let option of menuOptions" class="flex flex-col">
       <a (click)="toggleExpand(option)" class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer" [routerLink]="option.route">
@@ -9,13 +9,6 @@
         class="ml-6 my-1 hover:bg-gray-700 p-2 rounded">
         <a [routerLink]="subOption.route">{{ subOption.name }}</a>
       </div>
-    </div>
-    <hr class="mt-40">
-    <div class="mt-5">
-      <a class="mx-4 my-2 hover:bg-gray-700 p-2 rounded cursor-pointer" (click)="onClick()">
-        <mat-icon>logout</mat-icon>
-        Cerrar Sesión
-      </a>
     </div>
   </nav>
 </div>
