--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -9,14 +9,31 @@
       <p class="text-sm">{{ userName }}</p>
       <p class="text-xs">{{ rol }}</p>
     </span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" >
       <img class="w-10 h-10 rounded-full"
         src="https://static.vecteezy.com/system/resources/thumbnails/009/292/244/small/default-avatar-icon-of-social-media-user-vector.jpg"
         alt="user photo">
-    </button>
+      </button>
+      <span class="relative inline-flex" [matMenuTriggerFor]="menu">
+        <mat-icon class="text-white">keyboard_arrow_down</mat-icon>
+      </span>
+    
   </mat-toolbar>
 
-  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+  <mat-menu #menu="matMenu" class="mt-5">
+      <button type="button" class="relative inline-flex items-center w-full px-4 py-2 text-sm font-medium border-b border-gray-200 hover:bg-gray-100 hover:text-blue-900 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 -mt-2">
+        <mat-icon>account_circle</mat-icon>
+        <span class="ml-2">Perfil</span>
+          
+      </button>
+      <button type="button" (click)="logout()" class="relative inline-flex items-center w-full px-4 py-2 text-sm font-medium border-b border-gray-200 hover:bg-gray-100 hover:text-blue-900 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 -mb-5">
+          <mat-icon>logout</mat-icon>
+          <span class="ml-2">Cerrar sesión</span>    
+      </button>  
+  </mat-menu>
+  
+
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 40 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="56">
       <mat-nav-list>
