chore: Update profile component to include user profile photo

--- a/src/app/home/pages/profile/profile.component.html
+++ b/src/app/home/pages/profile/profile.component.html
@@ -6,19 +6,20 @@
   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
     <div class="grid grid-rows-3 grid-flow-col gap-4 m-7">
       <div class="row-span-6">
-          <img class="w-40 h-40 p-1 rounded-full ring-4 ring-blue-900 dark:ring-blue-900" src="{{photoBase64}}" alt="foto-perfil">
+        <img class="w-40 h-40 p-1 rounded-full ring-4 ring-blue-900 dark:ring-blue-900" src="{{profilePhoto}}"
+          alt="foto-perfil">
         <div>
           <label for="photo" class="block text-sm font-medium leading-6 text-gray-900">Foto</label>
-            <div class="mt-2">
-              <input type="file" id="photo" (change)="onFileChange($event)" accept="image/*"
-                class="block w-full text-gray-900">
-            </div>
+          <div class="mt-2">
+            <input type="file" id="photo" (change)="onFileChange($event)" accept="image/*"
+              class="block w-full text-gray-900">
+          </div>
         </div>
       </div>
       <div class="row-span-3 col-span-3">
-      <div class="border-b border-gray-900/10 pb-5">
+        <div class="border-b border-gray-900/10 pb-5">
           <span class="text-xl">Datos Personales</span>
-          <button mat-icon-button aria-label="Example icon button with a home icon" (click)="editar()">
+          <button type="button" mat-icon-button aria-label="Example icon button with a home icon" (click)="editar()">
             <mat-icon class="text-blue-800">edit</mat-icon>
           </button>
           <mat-divider></mat-divider>
@@ -28,7 +29,7 @@
               <div class="mt-2">
                 <input type="text" id="identity" formControlName="cedula"
                   class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2"
-                  pattern=".{10}$" readonly/>
+                  pattern=".{10}$" readonly />
                 <span class="mt-2 hidden text-xs text-red-500"
                   *ngIf="profileForm.get('cedula')?.invalid && profileForm.get('cedula')?.touched">
                   *Cédula debe tener 10 dígitos
@@ -38,8 +39,7 @@
             <div class="sm:col-span-1">
               <label for="user-name" class="block text-sm font-medium leading-6 text-gray-900">Nombres</label>
               <div class="mt-2">
-                <input type="text" id="user-name" formControlName="nombres"
-                  [readonly]="isDisabled"
+                <input type="text" id="user-name" formControlName="nombres" [readonly]="isDisabled"
                   class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2"
                   pattern="^[a-zA-Z\s]*$" />
                 <span class="mt-2 hidden text-xs text-red-500"
@@ -51,8 +51,7 @@
             <div class="sm:col-span-1">
               <label for="user-lastname" class="block text-sm font-medium leading-6 text-gray-900">Apellidos</label>
               <div class="mt-2">
-                <input type="text" id="user-lastname" formControlName="apellidos" 
-                  [readonly]="isDisabled"
+                <input type="text" id="user-lastname" formControlName="apellidos" [readonly]="isDisabled"
                   class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2"
                   pattern="^[a-zA-Z\s]*$" />
                 <span class="mt-2 hidden text-xs text-red-500"
@@ -72,8 +71,7 @@
             <div class="sm:col-span-1">
               <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo electrónico</label>
               <div class="mt-2">
-                <input id="email" type="email" formControlName="email" autocomplete="email"
-                  [readonly]="isDisabled"
+                <input id="email" type="email" formControlName="email" autocomplete="email" [readonly]="isDisabled"
                   class="block w-full rounded-md border-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 pl-2"
                   pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{2,5}" />
                 <span class="mt-2 hidden text-xs text-red-500"
@@ -110,9 +108,7 @@
             </div>
           </div>
         </div>
-        </div>
-        </div>
-      </form>
+      </div>
     </div>
-
-
+  </form>
+</div>
