fecha y hora en barra de menu

--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -3,7 +3,10 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon class="text-white">menu</mat-icon>
     </button>
-    <h1 class="example-app-name text-white">CDIAR</h1>
+    <span>
+      <p class="text-cyan-500 text-xs">{{dateTime}}</p>
+      <p class="example-app-name text-white text-2xl">CDIAR</p>
+    </span>
     <span class="example-spacer"></span>
     <span class="text-white">
       <p class="text-sm">{{ userName }}</p>
