Arreglo en recarga de página

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<!-- <login></login> -->
-<!-- <registro-usuario></registro-usuario> -->
-<!-- <verificacion-usuario></verificacion-usuario> -->
-<!-- <shared-footer></shared-footer>
-<router-outlet></router-outlet> -->
-
-<h1 *ngIf="!finishedAuthCheck()">
-    Loading
-  </h1>
+  <router-outlet></router-outlet>
   
-  
-  <router-outlet *ngIf="finishedAuthCheck()" />
