modificaciones en recursos

--- a/src/app/academic-resources/components/add-resource/add-resource.component.html
+++ b/src/app/academic-resources/components/add-resource/add-resource.component.html
@@ -1,45 +1,49 @@
 <mat-dialog-content>
     <p class="text-2xl text-black">Agregar Recurso</p>
     <hr>
-    <form [formGroup]="recursoGroup" (ngSubmit)="onSubmit()">
+     <form [formGroup]="recursoGroupForm" (ngSubmit)="onSubmit()">
         <div class="grid grid-cols-4 gap-4 mt-5 -mb-7">
-
             <div>
+                <label for="nivel" class="block text-sm font-medium leading-6 text-gray-900">Nivel</label>
                 <select id="niveles" formControlName="nivel"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     (change)="onNivelChange($event)">
-                    <option *ngFor="let nivel of nivelesType" [value]="nivel.value">
+                    <option *ngFor="let nivel of nivelesType" value="{{nivel.value}}">
                         {{ nivel.label }}
                     </option>
                 </select>
             </div>
 
             <div class="col-span-2">
-                <select id="asignaturas" formControlName="asignatura"
+                <label for="asignatura" class="block text-sm font-medium leading-6 text-gray-900">Asignatura</label>
+                <select id="asignaturas" formControlName="asignatura" 
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option *ngFor="let asignatura of asignaturas" [value]="asignatura.value">
-                        {{ asignatura.label }}
+                    <option *ngFor="let asignatur of asignaturas" value="{{asignatur.value}}">
+                        {{ asignatur.label }}
                     </option>
                 </select>
             </div>
 
             <div>
-                <select id="countries" formControlName="estado"
+                <label for="estado" class="block text-sm font-medium leading-6 text-gray-900">Estado</label>
+                <select id="estado" 
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option *ngFor="let estado of estados" [value]="estado.value">
+                    <option *ngFor="let estado of estados" value="{{estado.value}}">
                         {{ estado.label }}
                     </option>
                 </select>
             </div>
 
             <div class="col-span-4">
-                <input type="text" id="input-group-1" formControlName="nombreRecurso"
+                <label for="nombreRecurso" class="block text-sm font-medium leading-6 text-gray-900">Descripción</label>
+                <input type="text" id="nombreRecurso" formControlName="nombreRecurso"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     placeholder="Descripción">
             </div>
 
             <div class="col-span-4">
-                <select id="countries" formControlName="tipoRecurso"
+                <label for="tipoRecurso" class="block text-sm font-medium leading-6 text-gray-900">Tipo Recurso</label>
+                <select id="tipoRecurso" formControlName="tipoRecurso"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option selected>Tipo Recurso</option>
                     <option value="Link">Link</option>
@@ -48,12 +52,13 @@
             </div>
 
             <div class="col-span-4">
-                <input type="text" id="input-group-1"
+                <label for="link" class="block text-sm font-medium leading-6 text-gray-900">Link</label>
+                <input type="text" id="link" formControlName="link"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     placeholder="Link">
             </div>
 
-            <div class="flex items-center justify-center w-full col-span-4">
+            <!-- <div class="flex items-center justify-center w-full col-span-4">
                 <label for="dropzone-file"
                     class="flex flex-col items-center justify-center w-full h-50 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 hover:bg-gray-100">
                     <div class="flex flex-col items-center justify-center pt-5 pb-6">
@@ -67,9 +72,16 @@
                             drop</p>
                         <p class="text-xs text-gray-500">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
                     </div>
-                    <input id="dropzone-file" type="file" class="hidden" formControlName="recurso" />
+                    <input id="dropzone-file" type="file" class="hidden" formControlName="recurso"/>
                 </label>
-            </div>
+            </div> -->
+            <div class="col-span-4">
+                <label for="file" class="block text-sm font-medium leading-6 text-gray-900">Archivo/Imagen</label>
+                <div class="mt-2">
+                  <input type="file" id="file" (change)="onFileChange($event)" accept="image/*"
+                    class="block w-full text-gray-900">
+                </div>
+              </div>
 
             <div class="col-span-4 text-right">
                 <button type="button"
@@ -78,14 +90,23 @@
                         Cancelar
                     </span>
                 </button>
-                <button type="button"
+                <button type="submit"
                     class="text-white bg-blue-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
                     <span class="flex items-center justify-center">
-                        <!-- <mat-icon>save</mat-icon> -->
                         Guardar
                     </span>
                 </button>
             </div>
-        </div>
+       </div>
     </form>
 </mat-dialog-content>
+
+<!-- <div class="container">    
+    <div class="cardTo border-solid border-2 rounded my-3">
+        <app-resources-form (editedDataEmitter)="getData($event)" (valueFormEmitter)="getValidForm($event)"></app-resources-form>
+    </div>
+    <div style="text-align: right;" class="my-2">
+        <button class="btn btn-outline-danger" (click)="CloseModal()">Cancelar</button>
+        <button class="btn btn-light ml-3 backgroundbtn" [disabled]="validForm" (click)="saveResource()">Guardar</button>
+    </div>
+</div> -->
