listado de mis recursos

--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -37,12 +37,12 @@
     </div>
   </div>
 
-  <div class="flex items-center justify-between p-8">
+  <!-- <div class="flex items-center justify-between p-8">
     <button (click)="prevPage()" [disabled]="currentPage === 1"
       class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Anterior</button>
     <button (click)="nextPage()" [disabled]="currentPage === totalPages"
       class="px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Siguiente</button>
-  </div>
+  </div> -->
 </div>
 
 <ng-template #noData>
