--- a/src/app/academic-resources/components/add-resource/add-resource.component.html
+++ b/src/app/academic-resources/components/add-resource/add-resource.component.html
@@ -93,7 +93,7 @@
                         Cancelar
                     </span>
                 </button>
-                <button type="submit" (click)="pruebabtn()"
+                <button type="submit"
                     class="text-white bg-blue-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
                     <span class="flex items-center justify-center">
                         Guardar
