--- a/src/app/academic-resources/components/resource-filters/resource-filters.component.html
+++ b/src/app/academic-resources/components/resource-filters/resource-filters.component.html
@@ -8,22 +8,18 @@
     </div>
     
     <div>
-        <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-            <option selected>Nivel</option>
-            <option value="US">United States</option>
-            <option value="CA">Canada</option>
-            <option value="FR">France</option>
-            <option value="DE">Germany</option>
+        <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" (change)="onNivelChange($event)">
+            <option *ngFor="let nivel of nivelesType" value="{{nivel.value}}">
+                {{ nivel.label }}
+            </option>
           </select>
     </div>
     
     <div class="col-span-2">
         <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-            <option selected>Asignatura</option>
-            <option value="US">United States</option>
-            <option value="CA">Canada</option>
-            <option value="FR">France</option>
-            <option value="DE">Germany</option>
+            <option *ngFor="let asignatura of asignaturas" value="{{asignatura.value}}">
+                {{ asignatura.label }}
+            </option>
           </select>
     </div>
     
